Clarify cached model reuse flow

--- a/popup.html
+++ b/popup.html
@@ -184,6 +184,12 @@
       border-left-color: #e17055;
       color: #e17055;
     }
+
+    .status-message.loading {
+      background: linear-gradient(135deg, #fff3cd, #ffe8a1);
+      border-left-color: #f39c12;
+      color: #b9770e;
+    }
     
     .output-container {
       margin-top: 16px;
