--- a/sidepanel.html
+++ b/sidepanel.html
@@ -70,6 +70,7 @@
       display: flex;
       flex: 1;
       overflow: hidden;
+      position: relative; /* 使内部绝对定位的 handle 有参照 */
     }
 
     /* 左侧聊天列表 */
@@ -176,6 +177,35 @@
       display: flex;
       flex-direction: column;
       background: white;
+      position: relative; /* 让 handle 可以定位在边缘 */
+    }
+
+    /* 折叠时可点击的可见（用于在列表折叠后重新打开） */
+    .toggle-list-handle {
+      position: absolute;
+      left: -18px; /* 贴在聊天面板左侧边缘，超出被折叠的列表区域 */
+      top: 20px;
+      width: 36px;
+      height: 36px;
+      border-radius: 8px;
+      background: white;
+      border: 1px solid #e5e7eb;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      z-index: 30;
+      font-size: 16px;
+      color: #6b7280;
+    }
+
+    /* 当窗口较窄时，把手位置稍微调整以避免遮挡 */
+    @media (max-width: 768px) {
+      .toggle-list-handle {
+        left: 8px;
+        top: 12px;
+      }
     }
 
     /* 聊天头部 */
@@ -630,6 +660,7 @@
 
     <!-- 右侧聊天区域 -->
     <div class="chat-panel">
+      <button class="toggle-list-handle" id="toggleListHandle" title="打开/关闭对话列表">◀</button>
       <!-- 聊天头部 -->
       <div class="chat-header" id="chatHeader" style="display: none;">
         <div class="chat-header-left">
