--- a/sidepanel.html
+++ b/sidepanel.html
@@ -653,11 +653,17 @@
 
   <!-- 主容器 -->
   <div class="main-container">
-    <!-- 左侧聊天列表 -->
-    <div class="chat-list-panel" id="chatListPanel">
+    <!-- 左侧聊天列表 (默认折叠) -->
+    <div class="chat-list-panel collapsed" id="chatListPanel">
       <div class="chat-list-header">
         <span class="chat-list-title">对话历史</span>
-        <button class="toggle-list-btn" id="toggleListBtn">◀</button>
+        <!-- 展开时显示一个圈中带时钟的图标 -->
+        <button class="toggle-list-btn" id="toggleListBtn">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5"></circle>
+            <path d="M12 7v5l3 2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+        </button>
       </div>
       <div class="chat-list-content" id="chatListContent">
         <!-- 聊天记录将动态插入这里 -->
