add deleting function and show created confirmation

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -140,6 +140,22 @@
       align-items: center;
       gap: 8px;
       margin-bottom: 4px;
+      justify-content: space-between; /* put delete button to the right */
+    }
+
+    .chat-delete-btn {
+      background: none;
+      border: none;
+      color: #9ca3af;
+      cursor: pointer;
+      font-size: 13px;
+      padding: 6px;
+      border-radius: 6px;
+    }
+
+    .chat-delete-btn:hover {
+      background: #f3f4f6;
+      color: #ef4444;
     }
 
     .chat-item-icon {
