rename SmartInsight to BrewLink in sidepanel header

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SmartInsight Chat</title>
+  <titl Chat</title>
   <style>
     * {
       margin: 0;
@@ -625,7 +625,7 @@
   <div class="header">
     <div class="header-left">
       <div>
-        <div class="header-title">💼 SmartInsight</div>
+        <div class="header-title">💼 BrewLink</div>
         <div class="header-subtitle">AI-Powered Career Assistant</div>
       </div>
     </div>
