fix: restore sidepanel scroll

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -17,7 +17,7 @@
       height: 100vh;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
+      overflow: auto; /* 允许侧边栏滚动 * /
     }
 
     /* 顶部导航栏 */
