Update README, manifest, and sidepanel

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <titl Chat</title>
+  <title>BrewLink - Chat</title>
   <style>
     * {
       margin: 0;
@@ -17,10 +17,10 @@
       height: 100vh;
       display: flex;
       flex-direction: column;
-      overflow: auto; /* 允许侧边栏滚动 * /
+      overflow: auto; /* Allow sidebar scrolling */
     }
 
-    /* 顶部导航栏 */
+    /* Header navigation bar */
     .header {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: white;
